crates/termist-tui/src/snapshots/termist_tui__ui__tests__settings.snap
---
source: crates/termist-tui/src/ui.rs
expression: "render(&mut app, 80, 16).backend()"
---
" termist   orbit-api ◆1✓1                                                       "
"┏━━━━━━━┌ settings ────────────────────────────────────────────────────┐        "
"┃◆ claud│ theme     ‹ Üsküdar ›                                        │        "
"┃claude │ colours   ‹ auto (24-bit here) ›                             │        "
"┗━━━━━━━│ prefix    C-a                                                │        "
"┌ claude│ pane      ‹ auto (right from 180 columns) ›                  │───────┐"
"│hello  │ keys      …                                                  │       │"
"│       │ sounds    ‹ istanbul (vapur waits, martı done) ›             │       │"
"│       │ desktop   ‹ on, when the terminal is not in front ›          │       │"
"│       │ splash    ‹ on ›                                             │       │"
"│       │ idle      ‹ after 10 min ›                                   │       │"
"│       │ animation ‹ on ›                                             │       │"
"│       │                                                              │       │"
"│       │ default settings                                             │       │"
"└───────└──────────────────────────────────────────────────────────────┘───────┘"
"j/k choose · ←/→ change · Enter set · Esc close                                 "
