crates/termist-tui/src/snapshots/termist_tui__ui__tests__the_archive_view.snap
---
source: crates/termist-tui/src/ui.rs
expression: "render(&mut app, 60, 16).backend()"
---
" termist archive   orbit-api ◆1                       12:00 "
"┏━━━━━━━━━━━━━━━━━━━━━━┓                                    "
"┃✗ shell-2             ┃                                    "
"┃shell · exited        ┃                                    "
"┗━━━━━━━━━━━━━━━━━━━━━━┛                                    "
"┌ shell-2 — shell ─────────────────────────────────────────┐"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"archive · Enter restore and resume · hjkl move · d delete · "
