crates/termist-tui/src/snapshots/termist_tui__ui__tests__the_help_lists_every_key.snap
---
source: crates/termist-tui/src/ui.rs
expression: text
---
" termist   orbit-api ◆1✓1                                                 12:00 "
"┏┌ help ──────────────────────────────────────────────────────────────────────┐ "
"┃│termist <version> · default settings │ "
"┃│                                                                            │ "
"┗│Grid                                                                        │ "
"┌│  p            new task: prompt, CLI, model                                 │┐"
"││  Space        send the next instruction without entering                   ││"
"││  Enter        type into the selected session                               ││"
"││  /            find a session                                               ││"
"││  .            next session that needs you                                  ││"
"││  ,            previous session that needs you                              ││"
"││  n            new agent session                                            ││"
"││  t            new shell                                                    ││"
"││  P            new task like the card, in its worktree                      ││"
"││  W            the worktrees: show, hide, remove                            ││"
"││  X            remove the worktree; the branch stays                        ││"
"││  h            card to the left                                             ││"
"││  j            card below                                                   ││"
"││  k            card above                                                   ││"
"││  l            card to the right                                            ││"
"││  C-d          half a page down                                             ││"
"││  C-u          half a page up                                               ││"
"││  PageUp       scroll back through the session's output                     ││"
"││  ]            next project tab                                             ││"
"││  [            previous project tab                                         ││"
"││  1-9          project tab 1 to 9                                           ││"
"││  o            open a project                                               ││"
"││  x            close the project tab                                        ││"
"││  r            rename the card                                              ││"
"││  a            archive the card                                             ││"
"││  A            show archived cards                                          ││"
"││  v            the project's pull requests                                  ││"
"││  V            the card's pull request in the browser                       ││"
"││  R            read GitHub again now                                        ││"
"││  d            kill the session                                             ││"
"││  s            settings: theme, colours, prefix, pane, keys                 ││"
"││  ?            this help                                                    ││"
"││  q            quit termist (sessions keep running)                         ││"
"└└────────────────────────────────────────────────────────────────────────────┘┘"
"j/k scroll · Esc close                                                          "
