crates/termist-tui/src/snapshots/termist_tui__ui__tests__waiting_agents_of_closed_projects_are_counted_at_the_end_of_the_tab_bar.snap
---
source: crates/termist-tui/src/ui.rs
expression: t.backend()
---
" termist   orbit-api ◆1✓1  closed ◆2                  12:00 "
"┏━━━━━━━━━━━━━━━━━━━━━━┓╭──────────────────────╮            "
"┃◆ claude-1            ┃│✓ shell-2             │            "
"┃claude · waiting      ┃│shell · done          │            "
"┗━━━━━━━━━━━━━━━━━━━━━━┛╰──────────────────────╯            "
"┌ claude-1 — claude ───────────────────────────────────────┐"
"│hello                                                     │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"? help · p new task · Space follow-up · / sessions · n agent"
